--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -4,3 +4,9 @@
     line-height: 29px;
     margin: 20px 0 0 0;
     }
+
+    .Weather li strong{
+        color: #f65282;
+        font-weight: 400;
+    }
+    
