--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,18 +1,47 @@
 
-.Weather{
-    font-family: Arial, Helvetica, sans-serif;
-    border: 1px solid #dadde1;  
-padding: 16px;
-margin: 30px auto;
-border-radius: 4px;
-color: #878787;  
-}
+.Weather {
+background: #fff;
+border-radius: 16px;
+box-shadow: 0 30px 50px #41326414;
+color: #878787;
+font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
+padding: 40px;}
 
 .Weather h1{
-font-size: 24px;
-font-weight: 100;
-line-height: 29px;
-margin: 20px 0 0 0;
+color: #272142;
+font-size: 38px;
+font-weight: 700;
+line-height: 48px;
+margin: 20px 0 10px;
+}
+
+
+.Weather form {
+    border-bottom: 1px solid #f9f7fe;
+    margin-top: 40px;
+    padding-bottom: 30px;
+}
+
+.Weather .search-input {
+    background:   #f1fbf6;
+    border: none;
+    border-radius: 6px;
+    color: #27214266;
+    display: inline-block;
+    font-size: 16px;
+    height: 50px;
+    line-height: 20px;
+    padding: 15px 20px;
+}
+
+
+.Weather .btn {
+    background: #0d3a1a;
+    border: none;
+    font-size: 16px;
+    font-weight: 700;
+    height: 50px;
+    padding: 15px 0;
 }
 
 .Weather ul{
@@ -22,10 +51,12 @@ margin: 20px 0 0 0;
 
 
 .Weather li{
+    color: #27214266;
     font-size: 16px;
-    font-weight: 100;
-    line-height: 19px;
+    font-weight: 500;
+    line-height: 20px;
     list-style: none;
+    margin-bottom: 5px;
 }
 
 .Weather li strong{
@@ -33,24 +64,27 @@ margin: 20px 0 0 0;
     font-weight: 400;
 }
 
-.Weather img{
+.Weather .weather-icon{
     height: 64px;
     width: 64px;
-    margin-right:10px;
+    margin:10px 0;
     display: inline-block;
 }
 
-.Weather .temperature{
-    color: rgb(33,33,33);
-    font-size: 64px;
-    line-height: 60px;
-    font-weight: 400;
-}
-.Weather .unit{
-    color: rgb(33,33,33);
-    font-size: 16px;
-    font-weight: 400;
-    position: relative;
+
+.Weather .temperature {
+    color: #212121;
+    font-size: 80px;
+    font-weight: 700;
     line-height: 1;
-    top:-34px;
+    margin-left: 10px;
 }
+
+.Weather .unit {
+    color: #212121;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 36px;
+    line-height: 1;
+    position: relative;
+    top: -34px;}
