--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,12 +1,23 @@
-.weatherInfo h1{
-    font-size: 24px;
-    font-weight: 100;
-    line-height: 29px;
-    margin: 20px 0 0 0;
-    }
+.WeatherInfo{
+    margin-top: 20px;
+}
 
-    .Weather li strong{
-        color: #f65282;
-        font-weight: 400;
+.Weather li strong{
+    color: #f65282;
+    font-weight: 400;
     }
+    
+.WeatherInfo li {
+color: #27214266;
+font-size: 16px;
+font-weight: 500;
+line-height: 20px;
+list-style: none;
+margin-bottom: 5px;
+}
+
+.WeatherInfo .temperature-container {
+    align-items: center;
+    margin-top: 30px;
+}
     
